--- a/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -16,7 +16,7 @@
             <div class="flex h-20 items-center px-8 pt-6">
                 <img
                     class="w-24"
-                    src="images/logo/logo-text-on-dark.svg"
+                    src="images/logo/full-logo.svg"
                     alt="Logo image"
                 />
             </div>
@@ -36,14 +36,14 @@
                 <div class="hidden lg:flex">
                     <img
                         class="w-24 dark:hidden"
-                        src="images/logo/logo-text.svg"
+                        src="images/logo/full-logo.svg"
                     />
                     <img
                         class="hidden w-24 dark:flex"
-                        src="images/logo/logo-text-on-dark.svg"
+                        src="images/logo/full-logo.svg"
                     />
                 </div>
-                <img class="flex w-8 lg:hidden" src="images/logo/logo.png" />
+                <img class="flex w-8 lg:hidden" src="images/logo/logo.svg" />
             </div>
             <!-- Horizontal navigation -->
             <fuse-horizontal-navigation
