--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -3,7 +3,7 @@
 
 <!-- Navigation -->
 <fuse-vertical-navigation
-    class="dark bg-gray-900 print:hidden"
+    class="bg-white print:hidden"
     [mode]="isScreenSmall ? 'over' : 'side'"
     [name]="'mainNavigation'"
     [navigation]="navigation.default"
@@ -14,7 +14,7 @@
         <div class="flex w-full items-center p-4 pl-6">
             <!-- Logo -->
             <div class="flex items-center justify-center">
-                <img class="w-8" src="images/logo/logo.png" />
+                <img class="w-8" src="images/logo/logo.svg" />
             </div>
             <!-- Components -->
             <div class="ml-auto flex items-center">
@@ -58,7 +58,7 @@
         <div
             class="mb-4 mt-2 flex h-16 flex-0 items-center justify-center pl-2 pr-6 opacity-12"
         >
-            <!-- <img class="max-w-36" src="images/logo/logo-text-on-dark.svg" /> -->
+            <!-- <img class="max-w-36" src="images/logo/full-logo.svg" /> -->
         </div>
     </ng-container>
 </fuse-vertical-navigation>
