--- a/src/app/modules/admin/pages/settings/settings.component.html
+++ b/src/app/modules/admin/pages/settings/settings.component.html
@@ -16,7 +16,7 @@
                 <div
                     class="text-4xl font-extrabold leading-none tracking-tight"
                 >
-                    Settings
+                    Paramètres
                 </div>
                 <!-- Close button -->
                 <div class="lg:hidden">
