--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -10,7 +10,7 @@
                     <div class="h-16 w-16 flex-0 overflow-hidden rounded-full">
                         <img
                             class="h-full w-full object-cover"
-                            src="images/avatars/brian-hughes.jpg"
+                            src="images/avatars/default.jpg"
                         />
                     </div>
                     <div class="ml-4 flex min-w-0 flex-col">
