--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -23,7 +23,7 @@
 <mat-menu [xPosition]="'before'" #userActions="matMenu">
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
-            <span>Signed in as</span>
+            <span>Connecté en tant que</span>
             <span class="mt-1.5 text-md font-medium">{{ user.email }}</span>
         </span>
     </button>
@@ -34,20 +34,20 @@
     </button>
     <button mat-menu-item (click)="settings()">
         <mat-icon [svgIcon]="'heroicons_outline:cog-8-tooth'"></mat-icon>
-        <span >Settings</span>
+        <span >Paramètres</span>
     </button>
-    <button mat-menu-item [matMenuTriggerFor]="userStatus">
+    <!-- <button mat-menu-item [matMenuTriggerFor]="userStatus">
         <mat-icon
             [svgIcon]="'heroicons_outline:ellipsis-horizontal-circle'"
         ></mat-icon>
         <span>Status</span>
-    </button>
+    </button> -->
     <mat-divider class="my-2"></mat-divider>
     <button mat-menu-item (click)="signOut()">
         <mat-icon
             [svgIcon]="'heroicons_outline:arrow-right-on-rectangle'"
         ></mat-icon>
-        <span>Sign out</span>
+        <span>Déconnexion</span>
     </button>
 </mat-menu>
 
